add csrf token to all post forms

--- a/src/main/resources/static/booking-edit-modal.html
+++ b/src/main/resources/static/booking-edit-modal.html
@@ -8,6 +8,7 @@
             </div>
             <div class="modal-body">
                 <form method="post" action="/booking-edit" class="form-horizontal edit-form edit-booking-form">
+                    <input type="hidden" name="csrf-token" value="#csrf-token">
                     <div class="form-group">
                         <label class="col-sm-4 control-label">Booking ID: </label>
                         <h5 class="col-md-8 col-lg-8">#booking-id</h5>
