--- a/src/main/resources/static/new-booking-stage-1.html
+++ b/src/main/resources/static/new-booking-stage-1.html
@@ -120,6 +120,7 @@
 	</div>
 </div>
 <form action="/new-booking-2" method="post" class="submission-form">
+	<input type="hidden" name="csrf-token" value="#csrf-token">
 	<input type="hidden" id="jsonToSend" name="jsonFromStage1"/>
 </form>
 <script src="/js/core/jquery-ui.min.js"></script>
