--- a/src/main/resources/static/new-booking-stage-2.html
+++ b/src/main/resources/static/new-booking-stage-2.html
@@ -57,6 +57,7 @@
 </div>
 
 <form class="form-horizontal edit-form new-booking-form" action="/new-booking-3" method="post">
+	<input type="hidden" name="csrf-token" value="#csrf-token">
 
 	<input type="hidden" name="patient" value="#patient-id"/>
 	<input type="hidden" name="therapy" value="#therapy-id"/>
