--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -46,6 +46,7 @@
 			</div>
 			<div class="modal-body">
 				<form class="import-form">
+					<input type="hidden" name="csrf-token" value="#csrf-token">
 					<input type="hidden" name="table" value="patients">
 					<div class="form-group">
 						<p>Paste a CSV document of the following format:</p>
