--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -65,6 +65,7 @@
 				</div>
 				#[/if]
 				<form class="form-horizontal edit-form">
+					<input type="hidden" name="csrf-token" value="#csrf-token">
 					<input type="hidden" name="entity-type" value="staff-password-change"/>
 					<input type="hidden" class="location-override" value="/profile"/>
 
