--- a/src/main/resources/static/_delete-modal.html
+++ b/src/main/resources/static/_delete-modal.html
@@ -6,6 +6,7 @@
 			</div>
 			<div class="modal-body">
 				<form class="delete-form">
+					<input type="hidden" name="csrf-token" value="#csrf-token">
 					<input type="hidden" name="entity-type" value="#entity-type"/>
 					<input type="hidden" name="entity-id" value="0"/>
 					<div class="form-group">
