--- a/src/main/resources/static/patient-edit-modal.html
+++ b/src/main/resources/static/patient-edit-modal.html
@@ -7,6 +7,7 @@
 			</div>
 			<div class="modal-body">
 				<form class="form-horizontal edit-form">
+					<input type="hidden" name="csrf-token" value="#csrf-token">
 					<input type="hidden" name="entity-type" value="patient"/>
 					<input type="hidden" name="entity-id" value="0"/>
 					<div class="form-group">
