--- a/src/main/resources/static/staff-absences.html
+++ b/src/main/resources/static/staff-absences.html
@@ -69,6 +69,7 @@
 			</div>
 			<div class="modal-body">
 				<form class="form-horizontal edit-form">
+					<input type="hidden" name="csrf-token" value="#csrf-token">
 					<input type="hidden" name="entity-type" value="staff-absence"/>
 					<input type="hidden" name="entity-id" value="0"/>
 
