--- a/src/main/resources/static/staff-roles.html
+++ b/src/main/resources/static/staff-roles.html
@@ -62,6 +62,7 @@
 			</div>
 			<div class="modal-body">
 				<form class="form-horizontal edit-form">
+					<input type="hidden" name="csrf-token" value="#csrf-token">
 					<input type="hidden" name="entity-type" value="staff-role"/>
 					<input type="hidden" name="entity-id" value="0"/>
 
