--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -64,6 +64,7 @@
 			</div>
 			<div class="modal-body">
 				<form class="form-horizontal edit-form">
+					<input type="hidden" name="csrf-token" value="#csrf-token">
 					<input type="hidden" name="entity-type" value="staff"/>
 					<input type="hidden" name="entity-id" value="0"/>
 					<div class="form-group">
