--- a/src/main/resources/static/tracers.html
+++ b/src/main/resources/static/tracers.html
@@ -61,6 +61,7 @@
 			</div>
 			<div class="modal-body">
 				<form class="form-horizontal edit-form">
+					<input type="hidden" name="csrf-token" value="#csrf-token">
 					<input type="hidden" name="entity-type" value="tracer"/>
 					<input type="hidden" name="entity-id" value="0"/>
 					<div class="form-group">
