add csrf token to logout

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -60,7 +60,7 @@
 								<a href="/profile"><i class="fa fa-fw fa-lg fa-user"></i> Profile</a>
 							</li>
 							<li>
-								<a href="/logout"><i class="fa fa-fw fa-lg fa-power-off"></i> Log Out</a>
+								<a href="/logout?csrf-token=#csrf-token"><i class="fa fa-fw fa-lg fa-power-off"></i> Log Out</a>
 							</li>
 						</ul>
 					</li>
