--- a/src/main/resources/static/generic-events.html
+++ b/src/main/resources/static/generic-events.html
@@ -67,6 +67,7 @@
 			</div>
 			<div class="modal-body">
 				<form class="form-horizontal edit-form">
+					<input type="hidden" name="csrf-token" value="#csrf-token">
 					<input type="hidden" name="entity-type" value="generic-event"/>
 					<input type="hidden" name="entity-id" value="0"/>
 
