--- a/src/main/resources/static/cameras.html
+++ b/src/main/resources/static/cameras.html
@@ -62,6 +62,7 @@
 			</div>
 			<div class="modal-body">
 				<form class="form-horizontal edit-form">
+                    <input type="hidden" name="csrf-token" value="#csrf-token">
 					<input type="hidden" name="entity-type" value="camera"/>
 					<input type="hidden" name="entity-id" value="0"/>
 					<div class="form-group">
